--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://paphonwato.github.io/react-sample",
+  "homepage": "http://paphonwat.github.io/react-sample",
   "name": "react-sample",
   "version": "0.1.0",
   "private": true,
